change resources encoding

--- a/server/framework/src/main/resources/com/mg/framework/resources/messages.properties
+++ b/server/framework/src/main/resources/com/mg/framework/resources/messages.properties
@@ -10,7 +10,7 @@
 #
 # $Id: messages.properties,v 1.17 2008/12/08 06:15:00 safonov Exp $
 
-Copyright=Copyright © 1998 - 2008 BusinessTechnology, Ltd.
+Copyright=Copyright Â© 1998 - 2008 BusinessTechnology, Ltd.
 ApplicationTitle=Millennium Business Suite Anywhere 2007
 
 InternalSoftwareException=Internal software exception, please, make the request to products vendor
