--- a/server/baiengine/src/main/resources/com/mg/merp/baiengine/resources/messages_ru.properties
+++ b/server/baiengine/src/main/resources/com/mg/merp/baiengine/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.7 2007/11/16 11:29:58 safonov Exp $
+# $Id: messages_ru.properties,v 1.7 2007/11/16 11:29:58 safonov Exp $
 
 BAiImplementationInstantiationError=Ошибка создания реализации бизнес-расширения
 BAiNotFound=Бизнес-расширение \"{0}\" не найдено в репозитарии
