--- a/server/bpm/src/main/resources/com/mg/merp/bpm/resources/messages_ru.properties
+++ b/server/bpm/src/main/resources/com/mg/merp/bpm/resources/messages_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: messages_ru.windows1251,v 1.2 2007/09/10 15:12:19 alikaev Exp $
+# $Id: messages_ru.properties,v 1.2 2007/09/10 15:12:19 alikaev Exp $
 
 ProcessImageTitle=Схема бизнес-процесса: {0} (версия {1})
 ProcessInstancesTitle=Экземпляры бизнес-процесса: {0} (версия {1})
