--- a/server/core/src/main/resources/com/mg/merp/core/resources/formelements_ru.properties
+++ b/server/core/src/main/resources/com/mg/merp/core/resources/formelements_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 #
-# $Id: formelements_ru.windows1251,v 1.9 2008/12/23 09:38:29 safonov Exp $
+# $Id: formelements_ru.properties,v 1.9 2008/12/23 09:38:29 safonov Exp $
 
 Feature.FormBr.Title=Пользовательские поля
 Feature.FormMt.Title=Пользовательские поля
