--- a/server/crm/src/main/resources/com/mg/merp/crm/resources/formelements_ru.properties
+++ b/server/crm/src/main/resources/com/mg/merp/crm/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.14 2008/06/17 11:34:37 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.14 2008/06/17 11:34:37 sharapov Exp $
 
 Branch.FormBr.Title=Отрасли
 Branch.FormMt.Title=Отрасли
