--- a/server/docflow/src/main/resources/com/mg/merp/docflow/resources/dataitemlabels_ru.properties
+++ b/server/docflow/src/main/resources/com/mg/merp/docflow/resources/dataitemlabels_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: dataitemlabels_ru.windows1251,v 1.10 2007/12/14 08:50:00 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.10 2007/12/14 08:50:00 safonov Exp $
 
 Name=Наименование
 Code=Код
