--- a/server/docflow/src/main/resources/com/mg/merp/docflow/resources/formelements_ru.properties
+++ b/server/docflow/src/main/resources/com/mg/merp/docflow/resources/formelements_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: formelements_ru.windows1251,v 1.7 2009/01/26 16:41:11 safonov Exp $
+# $Id: formelements_ru.properties,v 1.7 2009/01/26 16:41:11 safonov Exp $
 
 ExecuteDocFlow=Отработка документа
 RollbackDocFlow=Откат ДО
