--- a/server/docflow/src/main/resources/com/mg/merp/docflow/resources/messages_ru.properties
+++ b/server/docflow/src/main/resources/com/mg/merp/docflow/resources/messages_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: messages_ru.windows1251,v 1.5 2008/09/01 07:42:50 safonov Exp $
+# $Id: messages_ru.properties,v 1.5 2008/09/01 07:42:50 safonov Exp $
 
 DocFlowMapTitle=Карта документооборота [Тип документ: %s %s]
 
