--- a/server/document/src/main/resources/com/mg/merp/document/resources/dataitemlabels_ru.properties
+++ b/server/document/src/main/resources/com/mg/merp/document/resources/dataitemlabels_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: dataitemlabels_ru.windows1251,v 1.17 2008/08/15 06:30:03 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.17 2008/08/15 06:30:03 sharapov Exp $
 
 Document.Currency=Валюта
 Document.To=Кому
