--- a/server/document/src/main/resources/com/mg/merp/document/resources/formelements_ru.properties
+++ b/server/document/src/main/resources/com/mg/merp/document/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.33 2008/08/15 06:30:03 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.33 2008/08/15 06:30:03 sharapov Exp $
 
 Document.DocAttribute=Тип/Номер/Дата
 Document.BaseDocAttribute=<html>Документ-основание:<br>Тип/Номер/Дата</html>
