--- a/server/factura/src/main/resources/com/mg/merp/factura/resources/dataitemlabels_ru.properties
+++ b/server/factura/src/main/resources/com/mg/merp/factura/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.2 2006/06/06 09:53:04 leonova Exp $
+# $Id: dataitemlabels_ru.properties,v 1.2 2006/06/06 09:53:04 leonova Exp $
 
 Id=Идентификатор
 DocType=Тип документа
