--- a/server/finance/src/main/resources/com/mg/merp/finance/resources/messages_ru.properties
+++ b/server/finance/src/main/resources/com/mg/merp/finance/resources/messages_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: messages_ru.windows1251,v 1.10 2009/02/16 07:47:27 sharapov Exp $
+# $Id: messages_ru.properties,v 1.10 2009/02/16 07:47:27 sharapov Exp $
 
 OperationTitle=%s. От %s. %s. На сумму %.4f %s
 TurnAccountInvalidPeriodRange=Задан неверный диапазон периодов!
