--- a/server/framework/src/main/resources/com/mg/framework/resources/messages_ru.properties
+++ b/server/framework/src/main/resources/com/mg/framework/resources/messages_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 #
-# $Id: messages_ru.windows1251,v 1.32 2008/12/23 09:37:13 safonov Exp $
+# $Id: messages_ru.properties,v 1.32 2008/12/23 09:37:13 safonov Exp $
 
 Copyright=Copyright © 1998 - 2008 BusinessTechnology, Ltd.
 Copyright.Warning=Внимание! Данный программный продукт защищен законами об авторских правах и международными соглашениями. Незаконное воспроизведение или распространение данной программы или ее части влечет гражданскую и уголовную ответственность.
