--- a/server/lbschedule/src/main/resources/com/mg/merp/lbschedule/resources/dataitemlabels_ru.properties
+++ b/server/lbschedule/src/main/resources/com/mg/merp/lbschedule/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.8 2007/04/21 11:49:33 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.8 2007/04/21 11:49:33 sharapov Exp $
 
 Schedule.Name=Наименование
 Schedule.Code=Код
