--- a/server/manufacture/src/main/resources/com/mg/merp/manufacture/resources/formelements_ru.properties
+++ b/server/manufacture/src/main/resources/com/mg/merp/manufacture/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.7 2007/07/30 14:46:58 safonov Exp $
+# $Id: formelements_ru.properties,v 1.7 2007/07/30 14:46:58 safonov Exp $
 
 CostDetailFields=Расшифровка стоимости
 ActCostDetailFields=Фактическая себестоимость
