--- a/server/mfreference/src/main/resources/com/mg/merp/mfreference/resources/dataitemlabels_ru.properties
+++ b/server/mfreference/src/main/resources/com/mg/merp/mfreference/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.12 2008/02/13 08:48:34 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.12 2008/02/13 08:48:34 sharapov Exp $
 
 Id=Идентификатор
 
