--- a/server/paymentalloc/src/main/resources/com/mg/merp/paymentalloc/resources/formelements_ru.properties
+++ b/server/paymentalloc/src/main/resources/com/mg/merp/paymentalloc/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.11 2008/03/14 13:38:57 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.11 2008/03/14 13:38:57 konyashkina Exp $
 
 Payment.FormBr.Title=Журнал платежей
 Payment.FormMt.Title=Журнал платежей
