--- a/server/reference/src/main/resources/com/mg/merp/reference/resources/formelements_ru.properties
+++ b/server/reference/src/main/resources/com/mg/merp/reference/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.31 2009/02/11 14:40:08 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.31 2009/02/11 14:40:08 sharapov Exp $
 
 Currency.FormBr.Title=Валюта и курсы валют
 Currency.FormMt.Title=Валюты
