--- a/server/reference/src/main/resources/com/mg/merp/reference/resources/messages_ru.properties
+++ b/server/reference/src/main/resources/com/mg/merp/reference/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.17 2009/02/11 14:40:08 sharapov Exp $
+# $Id: messages_ru.properties,v 1.17 2009/02/11 14:40:08 sharapov Exp $
 
 TaxLinkInputOrder=Введите порядок
 TaxLinkOrder=Порядок
