--- a/server/report/src/main/resources/com/mg/merp/report/resources/formelements_ru.properties
+++ b/server/report/src/main/resources/com/mg/merp/report/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.2 2009/02/26 14:58:57 safonov Exp $
+# $Id: formelements_ru.properties,v 1.2 2009/02/26 14:58:57 safonov Exp $
 
 ChooseReportDialog.Title=Выберите отчёт
 ReportParametersDialog.Title=Введите параметры отчёта
