--- a/server/report/src/main/resources/com/mg/merp/report/resources/messages_ru.properties
+++ b/server/report/src/main/resources/com/mg/merp/report/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.7 2008/05/13 15:19:23 safonov Exp $
+# $Id: messages_ru.properties,v 1.7 2008/05/13 15:19:23 safonov Exp $
 
 Birt.Engine.Home.Error=Не установлен путь к платформе BIRT
 Birt.Engine.OutputFormat.Error=Не установлен формат вывода отчёта
