--- a/server/salary/src/main/resources/com/mg/merp/salary/resources/dataitemlabels_ru.properties
+++ b/server/salary/src/main/resources/com/mg/merp/salary/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.13 2007/08/27 06:24:00 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.13 2007/08/27 06:24:00 sharapov Exp $
 
 MinSal.MinSalary=Размер минимальной зарплаты
 MinSal.BeginDate=Дата начала действия
