--- a/server/salary/src/main/resources/com/mg/merp/salary/resources/formelements_ru.properties
+++ b/server/salary/src/main/resources/com/mg/merp/salary/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.15 2008/03/14 13:51:17 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.15 2008/03/14 13:51:17 konyashkina Exp $
 
 MinSalary.FormBr.Title=Размеры минимальных зарплат
 MinSalary.FormMt.Title=Размер минимальной зарплаты
