--- a/server/scheduler/src/main/resources/com/mg/merp/scheduler/resources/dataitemlabels_ru.properties
+++ b/server/scheduler/src/main/resources/com/mg/merp/scheduler/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.1 2008/04/25 10:58:32 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.1 2008/04/25 10:58:32 safonov Exp $
 
 Scheduler.Code=Код
 Scheduler.Name=Наименование
