--- a/server/settlement/src/main/resources/com/mg/merp/settlement/resources/formelements_ru.properties
+++ b/server/settlement/src/main/resources/com/mg/merp/settlement/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.7 2008/03/14 13:54:43 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.7 2008/03/14 13:54:43 konyashkina Exp $
 
 Company.Center.FormBr.Title=Подразделения (центры учета)
 ContractorCard.FormBr.Title=Картотека расчетов с партнерами
