--- a/server/settlement/src/main/resources/com/mg/merp/settlement/resources/messages_ru.properties
+++ b/server/settlement/src/main/resources/com/mg/merp/settlement/resources/messages_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: messages_ru.windows1251,v 1.4 2008/04/29 08:22:33 alikaev Exp $
+# $Id: messages_ru.properties,v 1.4 2008/04/29 08:22:33 alikaev Exp $
 
 RollBackFail=Невозможно откатить документ - не найдена история!
 CreateTreeFail=Невозможно построить список. Корневое подразделение должно иметь тип 'Головное предприятие' или 'Филиал'.
