--- a/server/table/src/main/resources/com/mg/merp/table/resources/formelements_ru.properties
+++ b/server/table/src/main/resources/com/mg/merp/table/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.6 2008/08/12 14:40:45 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.6 2008/08/12 14:40:45 sharapov Exp $
 
 TimeBoardHead.FormBr.Title=Табели
 TimeBoardHead.FormMt.Title=Заголовок табеля
