--- a/server/warehouse/src/main/resources/com/mg/merp/warehouse/resources/formelements_ru.properties
+++ b/server/warehouse/src/main/resources/com/mg/merp/warehouse/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.32 2008/08/27 09:45:06 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.32 2008/08/27 09:45:06 sharapov Exp $
 
 Main.Tab.Title=Основные сведения
 Doc.MainTab.Title=Содержание
