--- a/server/workbench/src/main/resources/com/mg/merp/workbench/resources/messages_ru.properties
+++ b/server/workbench/src/main/resources/com/mg/merp/workbench/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.1 2007/04/12 06:09:48 poroxnenko Exp $
+# $Id: messages_ru.properties,v 1.1 2007/04/12 06:09:48 poroxnenko Exp $
 
 GetSysClassesError=Ошибка получения списка имён бизнес-компонентов
 GetSecGroups=Ошибка получения списка групп пользователей
