--- a/server/account/src/main/resources/com/mg/merp/account/resources/dataitemlabels_ru.properties
+++ b/server/account/src/main/resources/com/mg/merp/account/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.29 2009/02/26 15:17:13 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.29 2009/02/26 15:17:13 safonov Exp $
 
 Id=Идентификатор
 Code=Код
