--- a/server/account/src/main/resources/com/mg/merp/account/resources/formelements_ru.properties
+++ b/server/account/src/main/resources/com/mg/merp/account/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.37 2009/03/11 13:39:50 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.37 2009/03/11 13:39:50 sharapov Exp $
 
 Main.Tab.Title=Основные сведения
 MainDoc.Tab.Title=Содержание
