--- a/server/baiengine/src/main/resources/com/mg/merp/baiengine/resources/dataitemlabels_ru.properties
+++ b/server/baiengine/src/main/resources/com/mg/merp/baiengine/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.5 2007/11/16 11:29:58 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.5 2007/11/16 11:29:58 safonov Exp $
 
 Code=Код
 BigName=Описание
