--- a/server/baiengine/src/main/resources/com/mg/merp/baiengine/resources/formelements_ru.properties
+++ b/server/baiengine/src/main/resources/com/mg/merp/baiengine/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.4 2009/02/27 13:13:29 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.4 2009/02/27 13:13:29 sharapov Exp $
 
 BusinessAddinRepositorySearchForm.Title=Репозитарий бизнес расширений системы
 
