--- a/server/bpm/src/main/resources/com/mg/merp/bpm/resources/dataitemlabels_ru.properties
+++ b/server/bpm/src/main/resources/com/mg/merp/bpm/resources/dataitemlabels_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: dataitemlabels_ru.windows1251,v 1.1 2007/05/28 13:05:48 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.1 2007/05/28 13:05:48 safonov Exp $
 
 Resource=Ресурс
 Resource.Name=Наименование
