--- a/server/bpm/src/main/resources/com/mg/merp/bpm/resources/formelements_ru.properties
+++ b/server/bpm/src/main/resources/com/mg/merp/bpm/resources/formelements_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 
-# $Id: formelements_ru.windows1251,v 1.1 2007/05/28 13:05:48 safonov Exp $
+# $Id: formelements_ru.properties,v 1.1 2007/05/28 13:05:48 safonov Exp $
 
 Id=Идентификатор
 Refresh=Обновить
