--- a/server/contract/src/main/resources/com/mg/merp/contract/resources/dataitemlabels_ru.properties
+++ b/server/contract/src/main/resources/com/mg/merp/contract/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.13 2008/09/22 10:11:39 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.13 2008/09/22 10:11:39 sharapov Exp $
 
 Code=Код
 Name=Наименование
