--- a/server/contract/src/main/resources/com/mg/merp/contract/resources/formelements_ru.properties
+++ b/server/contract/src/main/resources/com/mg/merp/contract/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.15 2008/03/14 13:26:50 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.15 2008/03/14 13:26:50 konyashkina Exp $
 
 Contract.FormBr.Title=Контракты
 Contract.FormMt.Title=Контракт
