--- a/server/core/src/main/resources/com/mg/merp/core/resources/dataitemlabels_ru.properties
+++ b/server/core/src/main/resources/com/mg/merp/core/resources/dataitemlabels_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 #
-# $Id: dataitemlabels_ru.windows1251,v 1.8 2008/03/04 12:31:32 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.8 2008/03/04 12:31:32 safonov Exp $
 
 FeatureVal=Значение
 Feature=Пользовательское поле
