--- a/server/core/src/main/resources/com/mg/merp/core/resources/messages_ru.properties
+++ b/server/core/src/main/resources/com/mg/merp/core/resources/messages_ru.properties
@@ -8,7 +8,7 @@
 #
 # Millennium Business Suite Anywhere System.
 #
-# $Id: messages_ru.windows1251,v 1.9 2008/07/14 14:25:42 safonov Exp $
+# $Id: messages_ru.properties,v 1.9 2008/07/14 14:25:42 safonov Exp $
 
 LoginDialog.Title=Регистрация пользователя
 LoginDialog.Username=Имя пользователя
