--- a/server/crm/src/main/resources/com/mg/merp/crm/resources/dataitemlabels_ru.properties
+++ b/server/crm/src/main/resources/com/mg/merp/crm/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.8 2008/03/24 15:08:39 alikaev Exp $
+# $Id: dataitemlabels_ru.properties,v 1.8 2008/03/24 15:08:39 alikaev Exp $
 
 BigCode=Код
 Name=Наименование
