--- a/server/document/src/main/resources/com/mg/merp/document/resources/messages_ru.properties
+++ b/server/document/src/main/resources/com/mg/merp/document/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.4 2008/12/29 10:01:36 safonov Exp $
+# $Id: messages_ru.properties,v 1.4 2008/12/29 10:01:36 safonov Exp $
 
 DocumentTitle=%s. %s №%s от %s на %.4f %s.
 
