--- a/server/factura/src/main/resources/com/mg/merp/factura/resources/formelements_ru.properties
+++ b/server/factura/src/main/resources/com/mg/merp/factura/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.3 2006/07/05 10:15:47 leonova Exp $
+# $Id: formelements_ru.properties,v 1.3 2006/07/05 10:15:47 leonova Exp $
 
 FacturaHeadIn.FormBr.Title=Входящие счета-фактуры
 FacturaHeadIn.FormMt.Title=Входящий счет-фактура
