--- a/server/finance/src/main/resources/com/mg/merp/finance/resources/dataitemlabels_ru.properties
+++ b/server/finance/src/main/resources/com/mg/merp/finance/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.15 2007/09/19 05:03:33 alikaev Exp $
+# $Id: dataitemlabels_ru.properties,v 1.15 2007/09/19 05:03:33 alikaev Exp $
 
 Fin.Code=Код
 Fin.Name=Наименование
