--- a/server/finance/src/main/resources/com/mg/merp/finance/resources/formelements_ru.properties
+++ b/server/finance/src/main/resources/com/mg/merp/finance/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.14 2008/03/06 07:00:22 alikaev Exp $
+# $Id: formelements_ru.properties,v 1.14 2008/03/06 07:00:22 alikaev Exp $
 
 FinAccount.FormBr.Title=Счета финансового учета
 FinAccount.FormMt.Title=Счет финансового учета
