--- a/server/lbschedule/src/main/resources/com/mg/merp/lbschedule/resources/formelements_ru.properties
+++ b/server/lbschedule/src/main/resources/com/mg/merp/lbschedule/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.5 2007/09/10 13:30:55 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.5 2007/09/10 13:30:55 sharapov Exp $
 
 Schedule.FormBr.Title=Графики исполнения обязательств
 Schedule.FormMt.Title=График исполнения обязательств
