--- a/server/manufacture/src/main/resources/com/mg/merp/manufacture/resources/dataitemlabels_ru.properties
+++ b/server/manufacture/src/main/resources/com/mg/merp/manufacture/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.9 2007/07/30 10:26:38 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.9 2007/07/30 10:26:38 safonov Exp $
 
 Comment=Примечание
 Description=Описание
