--- a/server/manufacture/src/main/resources/com/mg/merp/manufacture/resources/messages_ru.properties
+++ b/server/manufacture/src/main/resources/com/mg/merp/manufacture/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.1 2007/07/30 10:26:38 safonov Exp $
+# $Id: messages_ru.properties,v 1.1 2007/07/30 10:26:38 safonov Exp $
 
 BOMNotFound=Не найден текущий состав изделия по позиции: {0}
 InvalidJobStatus=Неверный статус заказ - наряда на производство
