--- a/server/mfreference/src/main/resources/com/mg/merp/mfreference/resources/formelements_ru.properties
+++ b/server/mfreference/src/main/resources/com/mg/merp/mfreference/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.10 2008/03/14 13:35:38 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.10 2008/03/14 13:35:38 konyashkina Exp $
 
 Main.Tab.Title=Основные сведения
 Main.TotalTitle=Главная
