--- a/server/overall/src/main/resources/com/mg/merp/overall/resources/dataitemlabels_ru.properties
+++ b/server/overall/src/main/resources/com/mg/merp/overall/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.4 2008/06/30 04:23:06 alikaev Exp $
+# $Id: dataitemlabels_ru.properties,v 1.4 2008/06/30 04:23:06 alikaev Exp $
 
 Name=Наименование
 Norm.Position=Должность
