--- a/server/paymentalloc/src/main/resources/com/mg/merp/paymentalloc/resources/dataitemlabels_ru.properties
+++ b/server/paymentalloc/src/main/resources/com/mg/merp/paymentalloc/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.8 2007/06/05 12:51:45 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.8 2007/06/05 12:51:45 sharapov Exp $
 
 Payment.Planned=План
 Payment.PDate=Дата 
