--- a/server/paymentcontrol/src/main/resources/com/mg/merp/paymentcontrol/resources/dataitemlabels_ru.properties
+++ b/server/paymentcontrol/src/main/resources/com/mg/merp/paymentcontrol/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.8 2007/05/14 05:25:37 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.8 2007/05/14 05:25:37 sharapov Exp $
 
 Resource.OrgUnit=Подразделение
 Payment.DateFrom=Дата с
