--- a/server/paymentcontrol/src/main/resources/com/mg/merp/paymentcontrol/resources/formelements_ru.properties
+++ b/server/paymentcontrol/src/main/resources/com/mg/merp/paymentcontrol/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.16 2008/03/14 13:41:46 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.16 2008/03/14 13:41:46 konyashkina Exp $
 
 PmcResource.FormBr.Title=Средства платежа
 PmcResource.FormMt.Title=Средство платежа
