--- a/server/personnelref/src/main/resources/com/mg/merp/personnelref/resources/dataitemlabels_ru.properties
+++ b/server/personnelref/src/main/resources/com/mg/merp/personnelref/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.13 2008/03/25 14:03:20 alikaev Exp $
+# $Id: dataitemlabels_ru.properties,v 1.13 2008/03/25 14:03:20 alikaev Exp $
 
 Id=Идентификатор
 Name=Наименование
