--- a/server/personnelref/src/main/resources/com/mg/merp/personnelref/resources/formelements_ru.properties
+++ b/server/personnelref/src/main/resources/com/mg/merp/personnelref/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.12 2008/03/14 13:44:31 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.12 2008/03/14 13:44:31 konyashkina Exp $
 
 Main.Tab.Title=Основные сведения
 
