--- a/server/planning/src/main/resources/com/mg/merp/planning/resources/dataitemlabels_ru.properties
+++ b/server/planning/src/main/resources/com/mg/merp/planning/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.9 2007/07/30 10:36:07 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.9 2007/07/30 10:36:07 safonov Exp $
 
 BigCode=Код
 Name=Наименование
