--- a/server/planning/src/main/resources/com/mg/merp/planning/resources/formelements_ru.properties
+++ b/server/planning/src/main/resources/com/mg/merp/planning/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.8 2008/03/14 13:46:37 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.8 2008/03/14 13:46:37 konyashkina Exp $
 
 CatalogWarehouse.FormBr.Title=Склады хранения товаров
 CatalogWarehouse.FormMt.Title=Склад хранения товаров
