--- a/server/planning/src/main/resources/com/mg/merp/planning/resources/messages_ru.properties
+++ b/server/planning/src/main/resources/com/mg/merp/planning/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.3 2008/02/13 13:19:36 alikaev Exp $
+# $Id: messages_ru.properties,v 1.3 2008/02/13 13:19:36 alikaev Exp $
 
 DuplicateGenericItemCatalog=На материал ссылается другой обобщенный товар
 ChangePlanningDate=Изменена дата планирования
