--- a/server/qualitycontrol/src/main/resources/com/mg/merp/qualitycontrol/resources/dataitemlabels_ru.properties
+++ b/server/qualitycontrol/src/main/resources/com/mg/merp/qualitycontrol/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.2 2006/06/13 06:52:55 leonova Exp $
+# $Id: dataitemlabels_ru.properties,v 1.2 2006/06/13 06:52:55 leonova Exp $
 
 Code=Код
 Name=Наименование
