--- a/server/reference/src/main/resources/com/mg/merp/reference/resources/dataitemlabels_ru.properties
+++ b/server/reference/src/main/resources/com/mg/merp/reference/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.34 2009/02/11 14:40:08 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.34 2009/02/11 14:40:08 sharapov Exp $
 
 Tax.ActiveDate=Дата начала действия
 Tax.DeactivateDate=Дата завершения действия
