--- a/server/reportviewer/src/main/resources/org/eclipse/birt/report/resource/Messages_ru.properties
+++ b/server/reportviewer/src/main/resources/org/eclipse/birt/report/resource/Messages_ru.properties
@@ -9,7 +9,7 @@
 # 
 #  Millennium Business Suite Anywhere System.
 ###############################################################################
-# $Id: Messages_ru.windows1251,v 1.3 2008/10/07 12:08:49 safonov Exp $
+# $Id: Messages_ru.properties,v 1.3 2008/10/07 12:08:49 safonov Exp $
 
 birt.viewer.title=Просмотр отчетов
 birt.viewer.title.navigation=Навигация
