--- a/server/retail/src/main/resources/com/mg/merp/retail/resources/formelements_ru.properties
+++ b/server/retail/src/main/resources/com/mg/merp/retail/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.5 2008/03/14 13:48:50 konyashkina Exp $
+# $Id: formelements_ru.properties,v 1.5 2008/03/14 13:48:50 konyashkina Exp $
 
 InvoiceHead.FormBr.Title=Документы на отпуск
 InvoiceHead.FormMt.Title=Документ на отпуск
