--- a/server/scheduler/src/main/resources/com/mg/merp/scheduler/resources/messages_ru.properties
+++ b/server/scheduler/src/main/resources/com/mg/merp/scheduler/resources/messages_ru.properties
@@ -1,3 +1,3 @@
-# $Id: messages_ru.windows1251,v 1.1 2008/04/25 10:58:32 safonov Exp $
+# $Id: messages_ru.properties,v 1.1 2008/04/25 10:58:32 safonov Exp $
 
 InvalidCronExpression=Неверное выражение cron
