--- a/server/security/src/main/resources/com/mg/merp/security/resources/dataitemlabels_ru.properties
+++ b/server/security/src/main/resources/com/mg/merp/security/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.4 2008/03/03 13:06:23 safonov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.4 2008/03/03 13:06:23 safonov Exp $
 
 User=Пользователь
 User.Name=Имя
