--- a/server/security/src/main/resources/com/mg/merp/security/resources/formelements_ru.properties
+++ b/server/security/src/main/resources/com/mg/merp/security/resources/formelements_ru.properties
@@ -1,4 +1,4 @@
-# $Id: formelements_ru.windows1251,v 1.5 2008/06/10 06:19:53 sharapov Exp $
+# $Id: formelements_ru.properties,v 1.5 2008/06/10 06:19:53 sharapov Exp $
 
 User.FormBr.Title=Пользователи
 User.FormBr.CreateUser=Создать пользователя...
