--- a/server/security/src/main/resources/com/mg/merp/security/resources/messages_ru.properties
+++ b/server/security/src/main/resources/com/mg/merp/security/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.3 2008/06/10 06:19:53 sharapov Exp $
+# $Id: messages_ru.properties,v 1.3 2008/06/10 06:19:53 sharapov Exp $
 
 RolePermissionsForm.Title=Права на бизнес-компоненты. Роль: {0}
 SubsystemPermissionsForm.Title=Права на модули. Роль: {0}
