--- a/server/settlement/src/main/resources/com/mg/merp/settlement/resources/dataitemlabels_ru.properties
+++ b/server/settlement/src/main/resources/com/mg/merp/settlement/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.3 2006/12/19 12:06:01 leonova Exp $
+# $Id: dataitemlabels_ru.properties,v 1.3 2006/12/19 12:06:01 leonova Exp $
 
 Settlement.Contractor=Партнер
 
