--- a/server/warehouse/src/main/resources/com/mg/merp/warehouse/resources/dataitemlabels_ru.properties
+++ b/server/warehouse/src/main/resources/com/mg/merp/warehouse/resources/dataitemlabels_ru.properties
@@ -1,4 +1,4 @@
-# $Id: dataitemlabels_ru.windows1251,v 1.21 2008/06/06 05:55:15 sharapov Exp $
+# $Id: dataitemlabels_ru.properties,v 1.21 2008/06/06 05:55:15 sharapov Exp $
 
 Id=Идентификатор
 Code=Код
