--- a/server/warehouse/src/main/resources/com/mg/merp/warehouse/resources/messages_ru.properties
+++ b/server/warehouse/src/main/resources/com/mg/merp/warehouse/resources/messages_ru.properties
@@ -1,4 +1,4 @@
-# $Id: messages_ru.windows1251,v 1.15 2008/08/27 09:45:06 sharapov Exp $
+# $Id: messages_ru.properties,v 1.15 2008/08/27 09:45:06 sharapov Exp $
 
 MandatoryValidatorSrcStock=Необходимо заполнить 'Склад'
 ProcessWHTransactError=Ошибка отработки документа по сладу
